<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_adress">

    <fragment
        android:id="@+id/navigation_adress"
        android:name="com.beetrack.bitcoin_wallet.ui.address.AddressFragment"
        android:label="@string/title_address"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.beetrack.bitcoin_wallet.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.beetrack.bitcoin_wallet.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />
</navigation>